<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">ToDay</string>
    <string name="title_activity_login">Нэвтрэх хэсэг</string>
    <string name="title_activity_signup">Бүртгүүлэх</string>
    <string name="title_activity_settings">Үндсэн тохиргоо</string>
    <string name="title_activity_graphic">Статистик</string>
    <string name="title_activity_help">Тусламж</string>
    <string name="mail_error">И-мэйл оруулна уу</string>
    <string name="title_activity_main">ToDay</string>
    <string name="no_event">Төлөвлөгөө байхгүй</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">Бүх өдөр</string>
    <string name="grant_access">Ашиглах зөвшөөрөл</string>
    <string name="today">Өнөөдөр</string>
    <string name="title">Гарчиг</string>
    <string name="event_time">Төлөвлөгөөний цаг</string>
    <string name="event_calendar">Төлөвлөгөөний календар</string>
    <string name="warning_empty_title">Төлөвлөгөөний гарчиг оруулна уу</string>
    <string name="choose_calendar">Календар сонгоно уу</string>
    <string name="create_event">Төлөвлөгөө нэмэх</string>
    <string name="edit_event">Төлөвлөгөө засах</string>
    <string name="save">Хадгалах</string>
    <string name="delete">Устгах</string>
    <string name="confirm_delete">Энэхүү төлөвлөгөөг устгах уу?</string>
    <string name="confirm_discard_changes">Өөрчлөлт буцаах?</string>
    <string name="warning_missing_calendar">Календар</string>
    <string name="end_time">Дуусах\n%s</string>
    <string name="default_calendar_name">Хувийн календар</string>
    <string name="event_created">Төлөвлөгөө нэмэгдлээ.</string>
    <string name="event_updated">Төлөвлөгөө заслаа.</string>
    <string name="event_deleted">Төлөвлөгөө устлаа.</string>
    <string name="morning">Өглөө</string>
    <string name="afternoon">Өдөр</string>
    <string name="night">Орой</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="show_weather">Цаг агаар харуулах</string>
    <string name="show_search">Хайх</string>
    <string name="show_settings">Тохиргоо</string>
    <string name="show_graphic">Статистик</string>
    <string name="show_about">Бидний тухай</string>
    <string name="show_contact">Холбоо барих</string>
    <string name="show_view">Дэлгэрэгүй</string>
    <string name="updating_weather" tools:ignore="TypographyEllipsis">Цаг агаарын мэдээлэл шинэчилж байна...</string>
    <string name="location_permission_required">Цаг агаар шинэчилхэд таны байршил хэрэгтэй</string>
    <string name="week_start">7 хоногийн эхлэл</string>
    <string name="saturday">Бямба</string>
    <string name="sunday">Ням</string>
    <string name="monday">Даваа</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="skip">Алгасах</string>
    <string name="next">Дараагийн</string>
    <string name="calendars">Календарууд</string>
    <string name="error_location">Таны байршилыг тогтоох боломжгүй байна</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="activity_the_hub">The Hub</string>
    <string name="action_settings">Тохиргоо</string>
    <string name="new_task_name">Ажлын нэр</string>
    <string-array name="select_time">
        <item>minutes</item>
        <item>hours</item>
    </string-array>
    <string name="action_new_flow">Төлөвлөгөө нэмэх</string>
    <string name="dialog_flow_name">Төлөвлөгөө нэмэх</string>
    <string name="dialog_create">НЭМЭХ</string>
    <string name="action_add_flow_element">Төлөвлөгөө нэмэх</string>
    <string name="empty_list">Хоосон байна&#8230;</string>
    <string name="action_delete_flow">Төлөвлөгөө устгах</string>
    <string name="describe_element_count">Төлөвлөгөөнүүд</string>
    <string name="title_activity_flow_state">FlowStateActivity</string>
    <string name="next_element">Дараагийн</string>
    <string name="more_time">Илүү хугацаа!</string>
    <string name="task_flag_description">An image of a blank flag outline</string>
    <string name="timer_description">An image of a timer.</string>
    <string name="license_text">License</string>
    <string name="support_devs">Хөгжүүлэгчидтэй холбогдох</string>
    <string name="drawer_about">Тухай</string>
    <string name="frgmt_show_element_notes_hint">This is where you type magical text!</string>
    <string name="finished_allcaps">Дууссан</string>
    <string name="minutes">минут</string>
    <string name="hours">цаг</string>
    <string name="notes_title">Тэмдэглэл:</string>
    <string name="stats_total_elements">Нийт ажил:</string>
    <string name="stats_estimated_time_title">Тооцоолсон цаг:</string>
    <string name="stats_times_complete_title">Дуусгасан:</string>
    <string name="stats_life_time_in_flow">Lifetime in Flow:</string>
    <string name="drawer_secret_land">Secret Land</string>
    <string name="export_to_drive">Export data</string>
</resources>